# CPP_RC

./: CAN_Accel.py  Can_Test_2.py  Can_test.py  Kalman.py  Pi.py  README.md  RF24.h  Scanner.cpp  TX.py  Threading test.py  Transcieve_test_pi.py  WX_gps.py  Xbox.py  grove_gps.py  inputs.py  logs.py  receive.py  send.py  simpletest.py  ui_testing.py  untitled.py  untitled.ui
Display/Display/: Display.qml  Display.qmlproject  Display.qmlproject.qtds.e556cda  Screen01.ui.qml  Values.qml  main.py
Display/Display/imports/Display/: Constants.qml
Display/Display/imports/Display/designer/: plugin.metainfo
Display_V2/Fourth/: main.qml
Display_V2/Third/: main.qml
Display_V2/again/: form.ui
Display_V4/: CMakeLists.txt  HomeForm.ui.qml  Page1Form.ui.qml
Display_V5/: CMakeLists.txt  HomeForm.ui.qml
Pi/: CMakeLists.txt  Pi.py  Pi.qmlproject  Pi.qmlproject.qtds  Screen01.ui.qml  Screen01.ui.qml.autosave
QT/First/: CMakeLists.txt  First.qmlproject  First.qmlproject.qtds  Screen01.ui.qml  main.py
QT/First/imports/Constants/: Constants.qml
build-Display_V4-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Display_V4  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Display_V4-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f5c90093a894f22963c1.json  cmakeFiles-v1-bc32d53796c2d9ecf9da.json  codemodel-v2-d4461a75e68b513853c5.json  (+4 more)
build-Display_V4-Desktop_x86_darwin_generic_mach_o_64bit-Debug/Display_V4_autogen/: deps  moc_predefs.h
build-Display_V4-Desktop_x86_darwin_generic_mach_o_64bit-Debug/Display_V4_autogen/EWIEGA46WW/: qrc_qml.cpp
build-Display_V5-Qt_6_2_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Display_V5  build.ninja  cmake_install.cmake
build-Display_V5-Qt_6_2_1_for_macOS-Debug/Display_V5_autogen/: deps
build-Display_V5-Qt_6_2_1_for_macOS-Debug/Display_V5_autogen/EWIEGA46WW/: qrc_qml.cpp
(+7 files in other folders)
